# EEG-project

./: .gitignore  README.md
circuits/prototype-channel/: components.lib  prototype-channel.pro  prototype-channel.sch  sym-lib-table
docs/: eindrapport.org  pva.org  sources.bib  title-eindrapport.org  title.org
docs/planning/: planning.ods
src/: forceIO.py  parser.py  plotter.py
src/force-trainer/: README.rst  sdkconfig
src/force-trainer/main/: esp32-force-trainer.c  force-trainer.c  force-trainer.h  main.c
src/openeeg/: README.md  sdkconfig
src/openeeg/main/: main.c
src/pc-parser/: CMakeLists.txt  Doxyfile
src/pc-parser/src/: array.hh  command-line.ggo  data-threads.hh  display-keyboard.cc  display-keyboard.hh  display-square.cc  display-square.hh  display.cc  display.hh  eeg-data-decoding.cc  eeg-data-decoding.hh  eeg-graph.cc  eeg-graph.hh  main.cc  rolling-array.hh  serial.cc  serial.hh  wave-generator.cc  wave-generator.hh
src/pc-parser/tests/: rolling-array-tests.cc
